drkns 06.07.2016 00:46:21 +0200 - build 4737

1. Рефакторинг.

drkns 03.07.2016 21:15:27 +0200 - build 4736

1. Временные файлы могли удаляться раньше времени.

drkns 03.07.2016 19:11:29 +0200 - build 4735

1. При определенных условиях мог падать поиск во вьювере.

drkns 03.07.2016 18:07:21 +0200 - build 4734

1. Рефакторинг.

drkns 02.07.2016 15:10:30 +0200 - build 4733

1. 0003261: Crash on ф: in command line

drkns 01.07.2016 01:13:59 +0200 - build 4732

1. Рефакторинг.

drkns 30.06.2016 10:25:43 +0200 - build 4731

1. Продолжение экспериментальных изменений в запускателе.

drkns 29.06.2016 21:51:02 +0200 - build 4730

1. Продолжение экспериментов:
   - вложенные вызовы FCTL_<G|S>ETUSERSCREEN можно.
   - поддержка FCTL_SETUSERSCREEN без предварительного FCTL_GETUSERSCREEN (раньше работало).

drkns 29.06.2016 09:41:59 +0200 - build 4729

1. 'Защита' от вложенных вызовов FCTL_<G|S>ETUSERSCREEN.

2. Пара мелочей.

drkns 27.06.2016 22:43:25 +0200 - build 4728

1. Продолжение экспериментальных изменений в запускателе.

drkns 27.06.2016 00:46:22 +0200 - build 4727

1. Продолжение экспериментальных изменений в запускателе.
   Должны лучше работать Ctrl-G и многострочные команды в User Menu.

shmuel 26.06.2016 16:37:24 +0200 - build 4726

1. Расширение возможностей функции Panel.SetCustomSortMode().

drkns 24.06.2016 23:19:28 +0200 - build 4725

1. С форума: при запуске программ индикатор административных прав почему-то остаётся на экране.

drkns 24.06.2016 01:39:45 +0200 - build 4724

1. Продолжение 4723 - исключение для ShiftEnter и поддержка run as.

drkns 24.06.2016 01:15:01 +0200 - build 4723

1. Очень экспериментальная фича: встроенные ассоциации распространяются на комстроку.

drkns 23.06.2016 22:46:27 +0200 - build 4722

1. Уточнение 4710.

drkns 23.06.2016 21:09:03 +0200 - build 4721

1. Новый параметр: far:config -> System.Executor.Comspec, определяет используемый командный процессор (по умолчанию %comspec%).
